bug - fixing background not covering full height

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 #container {
   background: linear-gradient(130deg, rgba(56,71,76,1) 0%, rgba(14,125,119,1) 100%);
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   text-align: center;
